deployment/delivery-gt.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: delivery-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: delivery-sg
spec:
  hosts:
  - "*"
  gateways:
  - delivery-gateway
  http:
  - match:
    - uri:
        prefix: /delivery/
    rewrite:
      uri: /

    route:
    - destination:
        port:
          number: 8080
        host: delivery
    corsPolicy:
      allowOrigins:
        - exact: "*"
      allowMethods:
        - POST
        - GET
        - PUT
        - DELETE
        - OPTIONS
      allowCredentials: true
      allowHeaders:
        - Content-Type
        - Authorization
      maxAge: "24h"
